fix: Update install instructions URL to wallet.satoshipay.me

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Install from Web</h3>
-                    <p>Open satoshipay.me in your browser. No app store needed.</p>
+                    <p>Open wallet.satoshipay.me in your browser. No app store needed.</p>
                 </div>
 
                 <div class="step-arrow">→</div>
