feat: Add PWA manifest and proper favicon icons

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <meta property="twitter:description" content="Self-custody Bitcoin ecash wallet. Send sats instantly, privately, and without permission.">
     <meta property="twitter:image" content="https://satoshipay.me/images/logo.jpg">
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/logo.jpg">
+    <!-- Favicon & PWA Icons -->
+    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="apple-touch-icon" href="/images/icon-192.png">
+    <link rel="manifest" href="/manifest.json">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
